dist/v1.1/README.md
# Расписание УлГТУ — Android-приложение

Клиент для сайта <https://timetable.житков.рф/>: WebView с фильтром по парам,
виджетами «Следующая пара» / «Пары на сегодня», напоминаниями и офлайн-копией.

Сайт — это HTML, сгенерированный Microsoft Word 97, без единого класса или `id`.
Приложение умеет разбирать его таблицы, поэтому виджеты и фильтр работают
не «поверх страницы», а по настоящим данным расписания.

---

## Что просили и что сделано

| Запрос | Реализация |
|---|---|
| Android WebView приложение для сайта | `MainActivity` + WebView: JavaScript, DOM Storage, cookies, зум, загрузка файлов, deep links |
| Сохранение последнего открытого окна | URL, заголовок, позиция прокрутки и **история переходов** (`WebView.saveState`). Переживает поворот экрана, смену темы и убийство процесса |
| Автообновление страницы при открытии | При запуске страница запрашивается с `Cache-Control: no-cache`; плюс обновление при возврате в приложение спустя 5 минут; плюс опциональное обновление каждые 15 минут |
| Фильтр по парам | Чипы «1…8» под панелью и нижний лист: ненужные пары скрываются в таблице. Дополнительно «скрывать дни без пар» и «скрывать прошедшие пары» (по времени звонков) |
| Виджет «Следующая пара» | Номер пары, предмет, вид занятия, аудитория, преподаватель, день, время и обратный отсчёт |
| «Ещё что-нибудь» | Виджет «Пары на сегодня», напоминания о паре, поиск группы по всем разделам, тёмная тема сайта, офлайн-копия, вписывание таблицы в экран и другое (см. ниже) |

## Дополнительные возможности

- **Виджет «Пары на сегодня»** — список пар текущего дня с временем и аудиториями.
- **Напоминания о паре** — уведомление за 5/10/15/30 минут до начала, один раз на пару.
- **Поиск группы** — на сайте поиска нет: чтобы найти группу, нужно угадать раздел и курс.
  Приложение скачивает все разделы (ФИСТ/ГФ, МФ/РТФ/ЭФ/ИФМИ, ИАТУ/ИЭФ/ЗВФ, КЭИ, СФ,
  преподаватели), разбирает их в плоский список с курсом и даёт поиск и избранное.
- **Тёмная тема сайта** — сайт светлый и «word-овский», приложение перекрашивает его
  в тёмные тона; отдельно переключается тема самого приложения.
- **Офлайн-копия** — если сети нет, показывается сохранённая страница расписания.
- **Вписывание таблицы в экран** — широкая таблица (801 px) раскладывается по ширине телефона.
- **Размер текста** — 60…200 %.
- **Режим ПК**, «поделиться ссылкой», «скопировать ссылку», «открыть в браузере», переход на главную.
- **Встроенная строка «следующая пара»** прямо в приложении (можно отключить или скрыть).
- **Виджеты обновляются точно к началу и концу пары** — неточный `AlarmManager`-будильник
  без специальных разрешений, плюс `WorkManager` раз в 30 минут.

---

## Установка

Готовый APK (подписан отладочным ключом, ставится на любой аппарат):

```
app/build/outputs/apk/debug/app-debug.apk
```

```bash
adb install -r app/build/outputs/apk/debug/app-debug.apk
```

Либо скопируйте APK на телефон и откройте (понадобится разрешить установку
из неизвестных источников).

**Первый запуск.** Откройте расписание своей группы — оно автоматически станет
источником для виджетов и напоминаний. Затем добавьте виджет на рабочий стол:
долгое нажатие на свободном месте → «Виджеты» → «Расписание УлГТУ».

Требования: Android 7.0 (API 24) и новее.

---

## Сборка

Нужны JDK 17 и Android SDK с платформой 34:

```bash
export JAVA_HOME=/path/to/jdk17
export ANDROID_HOME=/path/to/android-sdk   # platforms;android-34, build-tools;34.0.0
./gradlew assembleDebug
```

Проект обычный: `local.properties` с `sdk.dir` подхватывается автоматически.

<details>
<summary>Сборка на ARM64-хосте (Linux/Android aarch64)</summary>

Из всего инструментария AGP нативно зависит только `aapt2`, а Google собирает его
для Linux лишь под x86_64. На ARM64 можно запустить его через qemu:

```bash
# 1. x86_64-окружение для aapt2
dpkg-deb -x libc6_*.deb libstdc++6_*.deb zlib1g_*.deb libexpat1_*.deb /opt/amd64-sysroot
ln -sfn usr/lib64 /opt/amd64-sysroot/lib64 && ln -sfn usr/lib /opt/amd64-sysroot/lib

# 2. обёртка (имя обязано заканчиваться на «aapt2»: AGP проверяет имя файла)
mkdir -p /opt/aapt2-bin
printf '#!/bin/sh\nexec /usr/bin/qemu-x86_64-static -L /opt/amd64-sysroot /opt/aapt2/aapt2 "$@"\n' \
  > /opt/aapt2-bin/aapt2
chmod +x /opt/aapt2-bin/aapt2

# 3. указать AGP (в ~/.gradle/gradle.properties, чтобы не менять проект)
echo 'android.aapt2FromMavenOverride=/opt/aapt2-bin/aapt2' >> ~/.gradle/gradle.properties
```

Остальные шаги (`d8`/`r8`, подпись, упаковка) — обычный JVM-код и работают на ARM64 как есть.

</details>

---

## Как это устроено

### Разбор расписания

Страница группы выглядит так:

```
Пары  | 1-я | 2-я | ... | 8-я
Время | 08:30–09:50 | 10:00–11:20 | ...
Пнд, 14.09.2026 | | пр.<br>Современные международные отношения<br>Чернов В А<br>6-618 |
```

- на странице **две таблицы** — текущая и следующая неделя (заголовки «Неделя: N-я (…–…)»),
  поэтому виджет корректно работает на границе недель;
- строка «Время» даёт времена звонков, по ним считаются «прошедшие пары» и обратный отсчёт;
- ячейка занятия раскладывается **по смыслу, а не по позиции**: на странице группы порядок
  «вид, предмет, преподаватель, аудитория», а на странице преподавателя —
  «группа, вид, предмет, аудитория». Позиционный разбор на этом ломается, а классификация
  по содержимому работает для обеих схем.

Аудитория определяется структурно (`3-308`, `2-СЗ`, `10-акт.зал`), а не поиском подстроки:
поиск слова «спорт» ловил предмет «Элективные курсы по физической культуре и **спорт**у»
и менял предмет с аудиторией местами.

Логика разбора проверена на живых страницах сайта — 34 проверки
(`ScheduleParser`, `ScheduleLogic`), включая обе схемы ячеек, подгруппы, пустые пары
и выбор «следующей пары» в разных ситуациях.

### Фильтр по парам

Сайт статический, поэтому фильтр — это JavaScript, который внедряется в страницу
(`web/InjectedScripts.kt`):

- колонка `N` таблицы соответствует `N`-й паре, колонка `0` — дню недели;
- ненужные колонки получают `display: none`, поэтому таблица честно перестраивается;
- «прошедшие пары» считаются по времени звонков из строки «Время»;
- если в таблице не осталось видимых дней — скрывается вся таблица;
- скрипт идемпотентен: пересчёт состояния без перезагрузки страницы.

Скрытые пары уважают и виджеты с напоминаниями: если вы не хотите видеть 1-ю пару,
она не попадёт в «следующую пару».

### Виджеты

Страница сама отдаёт свой HTML в приложение через JS-мост (`WebAppInterface`), когда
распознаёт в себе расписание. Это надёжнее повторного скачивания: в виджет попадает
ровно то, что на экране, включая данные из кэша WebView. Дополнительно `WorkManager`
раз в 30 минут обновляет «мою группу» по сети, чтобы виджет жил без запуска приложения.
Разобранное расписание хранится в `filesDir/schedule_cache.json`.

### Структура проекта

```
app/src/main/java/ru/ulstu/timetable/
├── Constants.kt                 адреса и имена
├── TimetableApp.kt              Application: канал уведомлений, расписание синхронизации
├── data/
│   ├── GroupCatalog.kt          каталог групп по всем разделам (для поиска)
│   ├── Prefs.kt                 настройки + «последнее открытое окно»
│   ├── ScheduleCache.kt         сериализация расписания в JSON
│   ├── ScheduleParser.kt        разбор HTML расписания
│   ├── ScheduleRepository.kt    сеть (HttpURLConnection) + кэш
│   └── UrlTools.kt              IDN (кириллический домен), определение типов страниц
├── model/Schedule.kt            модели и ScheduleLogic: «следующая пара», «идёт сейчас»
├── ui/
│   ├── MainActivity.kt          WebView, фильтр, меню, офлайн, автообновление
│   ├── FilterBottomSheet.kt     нижний лист «Фильтр по парам»
│   ├── GroupPickerActivity.kt   поиск группы с избранным
│   ├── SettingsActivity.kt      настройки
│   └── SettingsRows.kt          конструктор строк настроек
├── web/
│   ├── InjectedScripts.kt       фильтр, тёмная тема, опрос страницы
│   └── WebAppInterface.kt       JS-мост «страница → приложение»
├── widget/                      два виджета, отрисовка, будильники, синхронизация
└── work/                        SyncWorker и напоминания
```

---

## Разрешения

| Разрешение | Зачем |
|---|---|
| `INTERNET`, `ACCESS_NETWORK_STATE` | загрузка расписания и работа офлайн-режима |
| `POST_NOTIFICATIONS` | напоминания о паре (Android 13+ спрашивает при включении) |
| `RECEIVE_BOOT_COMPLETED` | восстановление периодической синхронизации после перезагрузки |
| `WAKE_LOCK`, `FOREGROUND_SERVICE` | добавляет `WorkManager` (фоновое обновление виджетов) |

Cleartext-трафик запрещён, доверяются только системные сертификаты.

---

## Ограничения

- Виджет показывает данные после того, как расписание хотя бы раз получено
  (открытие приложения или фоновая синхронизация).
- Для физкультуры и подобных занятий адрес может быть не аудиторией, а площадкой
  (`2-СЗ`, `10-акт.зал`) — приложение показывает строку как есть.
- Сайт отдаёт **HTTP 200** даже для несуществующих страниц (внутри — текст «расписание
  снова сломали»). Приложение отличает такие страницы по содержимому и не затирает
  ими хороший кэш.
- Раздел «МФ, РТФ, ЭФ, ИФМИ» на момент сборки отдавал заглушки вместо расписания —
  это состояние сайта, а не приложения.
- Если сайт поменяет разметку, разбор данных и поиск групп могут потребовать правок;
  сам WebView продолжит показывать страницу.
- Release-сборка не подписана: для публикации настройте свой keystore.

---

## Изменения

### 1.1 (versionCode 2)

- **Исправлена прокрутка вверх.** `SwipeRefreshLayout` спрашивает о возможности прокрутки
  вверх у своего прямого ребёнка, а им был `FrameLayout`-обёртка (нужна, чтобы накладывать
  экран ошибки поверх WebView). `FrameLayout` не скроллится, поэтому свайп вниз всегда
  воспринимался как жест обновления и страница перезагружалась вместо прокрутки.
  Теперь проверка делегируется WebView через `setOnChildScrollUpCallback`, и обновление
  срабатывает только когда страница действительно в самом верху.

### 1.0 (versionCode 1)

- Первая версия: WebView-клиент, сохранение последнего окна, автообновление, фильтр
  по парам, виджеты «Следующая пара» и «Пары на сегодня», напоминания, поиск группы,
  тёмная тема, офлайн-копия.

